@startuml

title __BASE's Class Diagram__\n

  namespace com.jue.framework {
    namespace base {
      class com.jue.framework.base.BaseActivity {
          {static} + PERMISSION_WINDOW_REQUEST_CODE : int
          {static} - PERMISSION_REQUEST_CODE : int
          - mPerList : List<String>
          - mPerNoList : List<String>
          - mStrPermission : String[]
          + onMessageEvent()
          + onRequestPermissionsResult()
          # checkPermissions()
          # checkPermissionsAll()
          # checkWindowPermissions()
          # onCreate()
          # onDestroy()
          # request()
          # requestPermission()
          # requestPermissionAll()
          # requestWindowPermissions()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace base {
      interface com.jue.framework.base.BaseActivity.OnPermissionsResult {
          {abstract} + OnFail()
          {abstract} + OnSuccess()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace base {
      class com.jue.framework.base.BaseBackActivity {
          + onOptionsItemSelected()
          # onCreate()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace base {
      class com.jue.framework.base.BaseFragment {
          + onCreate()
          + onDestroy()
          + onMessageEvent()
          # checkWindowPermissions()
          # requestWindowPermissions()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace base {
      class com.jue.framework.base.BasePageAdapter {
          - mList : List<View>
          + BasePageAdapter()
          + destroyItem()
          + getCount()
          + instantiateItem()
          + isViewFromObject()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace base {
      class com.jue.framework.base.BaseUIActivity {
          # onCreate()
      }
    }
  }
  

  com.jue.framework.base.BaseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.jue.framework.base.BaseActivity o-- com.jue.framework.base.BaseActivity.OnPermissionsResult : permissionsResult
  com.jue.framework.base.BaseActivity +-down- com.jue.framework.base.BaseActivity.OnPermissionsResult
  com.jue.framework.base.BaseBackActivity -up-|> com.jue.framework.base.BaseActivity
  com.jue.framework.base.BaseFragment -up-|> androidx.fragment.app.Fragment
  com.jue.framework.base.BasePageAdapter -up-|> androidx.viewpager.widget.PagerAdapter
  com.jue.framework.base.BaseUIActivity -up-|> com.jue.framework.base.BaseActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
